syntax = "proto3";

package auth;

// ===== SERVICE DEFINITION =====
service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {};
  rpc Login (LoginRequest) returns (LoginResponse) {};
  rpc VerifyOTP (VerifyOtpRequest) returns (VerifyOtpResponse) {};
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
}

// ===== MESSAGES =====

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string realname = 4;
}

message RegisterResponse {
  bool success = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string sessionId = 1;
}

message VerifyOtpRequest {
  string sessionId = 1;
  string otp = 2;
}

message VerifyOtpResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshRequest {
  string refreshToken = 1;
}

message RefreshResponse {
  string access_token = 1;
}

